Fixed weather widget appearance on mobile version

--- a/src/main/webapp/resources/css/settings.css
+++ b/src/main/webapp/resources/css/settings.css
@@ -371,7 +371,9 @@ textarea {
     }
 
 }
-
+.ui-loader h1 {
+    display: none;
+}
 /*@media screen and (max-width: 330px){*/
     /*.login{*/
         /*width: 90%;*/
