--- a/src/main/webapp/resources/css/weather.css
+++ b/src/main/webapp/resources/css/weather.css
@@ -57,7 +57,7 @@ main{
     background-color: #ffffff;
     border: 1px solid #108f38;
     width: 97%;
-    height: 335px;
+    /*height: 335px;*/
     /*-moz-box-shadow: 0 0 2px 1px #108f38;*/
     /*-webkit-box-shadow: 0 0 2px 1px #108f38;*/
     /*box-shadow: 0 0 2px 1px #108f38;*/
@@ -69,7 +69,7 @@ main{
 
 #generalSize{
     width: 100%;
-    height: 335px;
+    /*height: 335px;*/
 }
 
 #generalGap{
