--- a/src/main/webapp/resources/css/weatherSmall.css
+++ b/src/main/webapp/resources/css/weatherSmall.css
@@ -1,9 +1,9 @@
 /*WEATHER LINES*/
 #weatherContent{
     width: 100%;
-    overflow-y: scroll;
-    height: 350px;
-    padding-bottom: 70px;
+    /*overflow-y: scroll;*/
+    /*height: 350px;*/
+    /*padding-bottom: 70px;*/
 
 }
 .contentLine {
@@ -154,65 +154,66 @@
 #main{
     /*margin-top: 5%;*/
     /*padding-top: 0;*/
-    height: 350px;
-    overflow: hidden;
+    /*height: 350px;*/
+    /*overflow: hidden;*/
+    /*margin-bottom: 70px;*/
 }
 
 @media screen and (max-device-height: 450px){
     #main{
-        height: 730px;
+        /*height: 730px;*/
         margin-bottom: 75px;
     }
 
     #weatherContent{
-        height: 730px;
+        /*height: 730px;*/
     }
 }
 
 @media screen and (min-device-height: 481px)and (max-device-height: 520px){
     #main{
-        height: 400px;
+        /*height: 400px;*/
     }
 
     #weatherContent{
-        height: 400px;
+        /*height: 400px;*/
     }
 
 }
 
 @media screen and (min-device-height: 521px)and (max-device-height: 600px){
     #main{
-        height: 450px;
+        /*height: 450px;*/
     }
     #weatherContent{
-        height: 450px;
+        /*height: 450px;*/
     }
 }
 
 @media screen and (min-device-height: 601px)and (max-device-height: 700px){
     #main{
-        height: 520px;
+        /*height: 520px;*/
     }
     #weatherContent{
-        height: 520px;
+        /*height: 520px;*/
     }
 }
 
 @media screen and (min-device-height: 701px)and (max-device-height: 800px){
     #main{
-        height: 650px;
+        /*height: 650px;*/
 
     }
     #weatherContent{
-        height: 650px;
+        /*height: 650px;*/
     }
 }
 
 @media screen and (min-device-height: 801px)and (max-device-height: 1300px) {
     #main{
-        height: 680px;
+        /*height: 680px;*/
     }
     #weatherContent{
-        height: 680px;
+        /*height: 680px;*/
     }
 }
